--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 REACT_APP_CHEC_PUBLIC_KEY=pk_362816527328d9701417763c7686dfb69011421085ff1
 CHECK_API_URL="https://api.chec.io"
-CHECK_SECRET_KEY = 
+CHECK_SECRET_KEY = sk_36281819f2931964b1b0fd693b3a6413c54958ce3be7f
