--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 
+ENVIRONMENT=development
+REACT_APP_CHEC_TEST_KEY=pk_test_36281a0957c4c46445be782ab15747e3bc09b5cd2ad00
+
+
+
+ENVIRONMENT=production
 REACT_APP_CHEC_PUBLIC_KEY=pk_362816527328d9701417763c7686dfb69011421085ff1
-CHECK_API_URL="https://api.chec.io"
-CHECK_SECRET_KEY 
