--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ REACT_APP_CHEC_TEST_KEY=pk_test_36281a0957c4c46445be782ab15747e3bc09b5cd2ad00
 
 ENVIRONMENT=production
 REACT_APP_CHEC_PUBLIC_KEY=pk_362816527328d9701417763c7686dfb69011421085ff1
+
+REACT_APP_CONTENTFUL_SPACE=luzzrfk31jzw
+REACT_APP_CONTENTFUL_TOKEN=Iy55eiWDx_zDnwykrB5-gWWEs_tnJZXj3_-FzVD_a0c
