--- a/sanity/package.json
+++ b/sanity/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "marizeloja",
+  "name": "marize-loja",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Maria Almeida <panopticonism@gmail.com>",
+  "author": "Panopticonism <panopticonism@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build"
+    "test": "sanity check",
+    "build": "sanity build public -y"
   },
   "keywords": [
     "sanity"
@@ -26,5 +27,7 @@
     "react-dom": "^17.0",
     "styled-components": "^5.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@sanity/cli": "^2.23.2"
+  }
 }
