--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
+    "eslint": "^8.6.0",
     "hamburger-react": "^2.4.1"
   }
 }
