--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,13 +23,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "start": "next start",
+    "lint": "next lint"
   },
   "browserslist": {
     "production": [
@@ -46,6 +41,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
     "eslint": "^8.6.0",
+    "eslint-config-next": "12.0.7",
     "hamburger-react": "^2.4.1"
   }
 }
