--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@material-ui/core": "^4.12.3",
     "eslint": "^8.6.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
     "hamburger-react": "^2.4.1"
   }
 }
