--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,6 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.36",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
     "contentful": "^9.1.5",
     "next": "latest",
     "react": "^17.0.2",
@@ -40,6 +38,9 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
+    "@types/next": "^9.0.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "eslint": "^8.6.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
