--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
     "typescript": "^4.4.4",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
