--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
+    "@mui/material": "^5.14.12",
     "@sanity/client": "^2.23.2",
     "@sanity/image-url": "^1.0.1",
     "@sendgrid/mail": "^7.6.0",
@@ -15,9 +16,9 @@
     "@types/node": "^12.20.36",
     "contentful": "^9.1.5",
     "mongodb": "^4.3.0",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
     "typescript": "^4.4.4",
@@ -43,12 +44,11 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/core": "^4.12.3",
     "@types/next": "^9.0.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "eslint": "^8.6.0",
-    "eslint-config-next": "12.0.7",
+    "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^8.3.0",
     "hamburger-react": "^2.4.1"
   }
