--- a/sanity/package.json
+++ b/sanity/package.json
@@ -9,22 +9,19 @@
   "scripts": {
     "start": "sanity start",
     "test": "sanity check",
-    "build": "sanity build public -y"
+    "build": "sanity build public -y",
+    "dev": "sanity dev"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.23.3",
-    "@sanity/core": "^2.23.2",
-    "@sanity/default-layout": "^2.23.3",
-    "@sanity/default-login": "^2.23.2",
-    "@sanity/desk-tool": "^2.23.4",
-    "@sanity/vision": "^2.23.3",
-    "prop-types": "^15.7",
-    "react": "^17.0",
+    "@sanity/vision": "^3.18.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-barcode": "^1.3.2",
-    "react-dom": "^17.0",
+    "react-dom": "^18.2.0",
+    "sanity": "^3.18.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
