--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.3.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.4.4",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.1.2"
